<resources>
    <string name="app_name">lab9_ec</string>
    <string name="welcome_msg">Add your todo below. Click complete button when it\'s done.</string>
    <string name="add_title">Enter title:</string>
    <string name="description">Enter description:</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter description here</string>
    <string name="button_text">Add</string>
    <string name="completeText">Mark Complete</string>
    <string name="todoSaved">Todo saved</string>
    <string name="completed_task">Task completed. Good job!</string>
</resources>